deps/v8/test/message/fail/class-fields-private-throw-early-2.out
*%(basename)s:8: TypeError: Write of private field #x to an object which did not contain the field
    ({}).#x = 1;
            ^
TypeError: Write of private field #x to an object which did not contain the field
    at new X (*%(basename)s:8:13)
    at *%(basename)s:12:1